force-app/main/default/objects/PardotForm__c/PardotForm__c.object-meta.xml
<CustomObject>
    <label>Pardot Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>