force-app/main/default/objects/PardotForm__c/fields/EmbedCode__c.field-meta.xml
<CustomField>
    <fullName>EmbedCode__c</fullName>
    <label>Embed Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>