force-app/main/default/objects/PardotForm__c/fields/FormId__c.field-meta.xml
<CustomField>
    <fullName>FormId__c</fullName>
    <externalId>true</externalId>
    <label>Form Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>