force-app/main/default/objects/PardotForm__c/fields/FormURL__c.field-meta.xml
<CustomField>
    <fullName>FormURL__c</fullName>
    <label>Form URL</label>
    <type>Url</type>
</CustomField>